--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,27 +11,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-        matrix:
-            dotnet-version: [ '3.1.x', '6.0.x' ]
+
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup dotnet ${{ matrix.dotnet-version }}
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: ${{ matrix.dotnet-version }}
+        dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
-    - name: Upload dotnet test results
-      uses: actions/upload-artifact@v4
-      with:
-        name: dotnet-results-${{ matrix.dotnet-version }}
-        path: TestResults-${{ matrix.dotnet-version }}
-          # Use always() to always run this step to publish test results when there are test failures
-      if: ${{ always() }}
+      run: dotnet test --no-build --verbosity normal
